--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,3 +183,23 @@ header nav ul li{
   line-height: 1.5;
   margin: 40px 0 25px;
 }
+
+/* contact section */
+.contact form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 60%;
+}
+
+.contact form .btn{
+  padding: 18px 42px;
+}
+.contact form input{
+  padding: 15px;
+  margin-right: 30px;
+  font-size: 18px;
+  color: #555;
+  flex: 1;
+}
